# automix

./: .gitignore  Dockerfile  README.md  check_and_upload.sh  pyproject.toml
automix/: __init__.py  cli.py  dataset.py  inference.py  pipeline.py  train.py  visualize.py
automix/effects/: README.md  __init__.py  effects.py  mixer.py  requirements.txt  test_mixer.py
automix/model/: README.md  __init__.py  conditioning.py  config.py  model.py  requirements.txt  training.py
data/: PIPELINE_LOG.md  README.md  analyze_tracks.py  download_jamendo.py  extract_transitions.py  requirements.txt  scrape_1001tracklists.py  scrape_mixcloud.py  scrape_youtube.py
data/metadata/youtube/: donit_20250106_ultimateravemix2025_fe0176dd.json  echomira_20240313_technomix2024naturerebornintec_8cda2ceb.json  stif_20240604_amazingtrance6bestnewtrance202_0e425487.json  stif_20241102_amazingtrance17bestnewtrance20_399ce1a7.json  technomix_20250222_technomix2025remixesofpopulars_5796529b.json  technomix_20250306_technomix2025remixesofpopulars_1196d23d.json  technomix_20250406_technomix2025remixesofpopulars_8e29c817.json  technomix_20250608_technomix2025remixesofpopulars_2a4ea6da.json  tony_20250116_melodictechnoprogressivehouse2_3c185f55.json
scripts/: prepare_data_gcs.sh
